docs/api/qiskit/0.25/qiskit.opflow.gradients.CircuitQFI.mdx
---
title: CircuitQFI (v0.25)
description: API reference for qiskit.opflow.gradients.CircuitQFI in qiskit v0.25
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.gradients.CircuitQFI
---

<span id="qiskit-opflow-gradients-circuitqfi" />

# qiskit.opflow\.gradients.CircuitQFI

<Class id="qiskit.opflow.gradients.CircuitQFI" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.17/qiskit/opflow/gradients/circuit_qfis/circuit_qfi.py" signature="CircuitQFI" modifiers="class">
  Circuit to Quantum Fisher Information operator converter.

  Converter for changing parameterized circuits into operators whose evaluation yields Quantum Fisher Information metric tensor with respect to the given circuit parameters

  This is distinct from DerivativeBase converters which take gradients of composite operators and handle things like differentiating combo\_fn’s and enforcing product rules when operator coefficients are parameterized.

  CircuitQFI - uses quantum techniques to get the QFI of circuits DerivativeBase - uses classical techniques to differentiate opflow data structures

  ### \_\_init\_\_

  <Function id="qiskit.opflow.gradients.CircuitQFI.__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                         |                                 |
  | ----------------------------------------------------------------------------------------------------------------------- | ------------------------------- |
  | [`__init__`](#qiskit.opflow.gradients.CircuitQFI.__init__ "qiskit.opflow.gradients.CircuitQFI.__init__")()              | Initialize self.                |
  | [`convert`](#qiskit.opflow.gradients.CircuitQFI.convert "qiskit.opflow.gradients.CircuitQFI.convert")(operator, params) | **type operator**`OperatorBase` |

  ### convert

  <Function id="qiskit.opflow.gradients.CircuitQFI.convert" signature="convert(operator, params)" modifiers="abstract">
    **Parameters**

    *   **operator** (`OperatorBase`) – The operator corresponding to the quantum state $|\psi(\omega)\rangle$ for which we compute the QFI.
    *   **params** (`Union`\[`ParameterExpression`, `ParameterVector`, `List`\[`ParameterExpression`]]) – The parameters $\omega$ with respect to which we are computing the QFI.

    **Return type**

    `OperatorBase`

    **Returns**

    An operator whose evaluation yields the QFI metric tensor.

    **Raises**

    **ValueError** – If `params` contains a parameter not present in `operator`.
  </Function>
</Class>

