docs/api/qiskit/0.43/qiskit.opflow.gradients.CircuitQFI.mdx
---
title: CircuitQFI (v0.43)
description: API reference for qiskit.opflow.gradients.CircuitQFI in qiskit v0.43
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.gradients.CircuitQFI
---

# CircuitQFI

<Class id="qiskit.opflow.gradients.CircuitQFI" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/gradients/circuit_qfis/circuit_qfi.py" signature="CircuitQFI" modifiers="class">
  Bases: [`ConverterBase`](qiskit.opflow.converters.ConverterBase "qiskit.opflow.converters.converter_base.ConverterBase")

  Deprecated: Circuit to Quantum Fisher Information operator converter.

  Converter for changing parameterized circuits into operators whose evaluation yields Quantum Fisher Information metric tensor with respect to the given circuit parameters

  This is distinct from DerivativeBase converters which take gradients of composite operators and handle things like differentiating combo\_fn’s and enforcing product rules when operator coefficients are parameterized.

  CircuitQFI - uses quantum techniques to get the QFI of circuits DerivativeBase - uses classical techniques to differentiate opflow data structures

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.gradients.circuit_qfis.circuit_qfi.CircuitQFI` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  ## Methods Defined Here

  <span id="qiskit-opflow-gradients-circuitqfi-convert" />

  ### convert

  <Function id="qiskit.opflow.gradients.CircuitQFI.convert" signature="CircuitQFI.convert(operator, params)" modifiers="abstract">
    **Parameters**

    *   **operator** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The operator corresponding to the quantum state $|\psi(\omega)\rangle$ for which we compute the QFI.
    *   **params** ([*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")  *|*[*ParameterVector*](qiskit.circuit.ParameterVector "qiskit.circuit.parametervector.ParameterVector") *| List\[*[*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")*]*) – The parameters $\omega$ with respect to which we are computing the QFI.

    **Returns**

    An operator whose evaluation yields the QFI metric tensor.

    **Raises**

    **ValueError** – If `params` contains a parameter not present in `operator`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>
</Class>

